[gd_scene load_steps=9 format=3 uid="uid://cdr8rck7r5wts"]

[ext_resource type="Script" path="res://equipment/guns/gun.gd" id="1_wwnuv"]
[ext_resource type="Texture2D" uid="uid://xnd37rmkthv" path="res://sprites/items/gun-firing.png" id="2_aj33k"]
[ext_resource type="Texture2D" uid="uid://c6s0dhmit678" path="res://sprites/items/gun.png" id="3_0sfdt"]
[ext_resource type="AudioStream" uid="uid://bj4sa5fvnssia" path="res://sounds/shoot.wav" id="4_fv3jv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_th6yu"]
radius = 200.0

[sub_resource type="AtlasTexture" id="AtlasTexture_u6oin"]
atlas = ExtResource("2_aj33k")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3reau"]
atlas = ExtResource("2_aj33k")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ajgoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6oin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3reau")
}],
"loop": false,
"name": &"firing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0sfdt")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[node name="Gun" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_wwnuv")

[node name="AutoFireRange" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_th6yu")

[node name="PivotPoint" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="Sprite" type="AnimatedSprite2D" parent="PivotPoint"]
unique_name_in_owner = true
position = Vector2(31, -3)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_ajgoq")
animation = &"firing"
autoplay = "idle"

[node name="ShootingPoint" type="Marker2D" parent="PivotPoint/Sprite"]
unique_name_in_owner = true
position = Vector2(8, -3)

[node name="CooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
position = Vector2(43, -7)
stream = ExtResource("4_fv3jv")
volume_db = -5.0

[node name="CanvasGroup" type="CanvasGroup" parent="."]
unique_name_in_owner = true
position = Vector2(19, -19)

[node name="CooldownProgress" type="ProgressBar" parent="CanvasGroup"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.784314)
offset_right = 22.0
offset_bottom = 4.0
show_percentage = false

[connection signal="animation_finished" from="PivotPoint/Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
